<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv1_titulo"
                android:layout_width="224dp"
                android:layout_height="58dp"
                android:fontFamily="casual"
                android:gravity="center"
                android:text="@string/seccion_uni"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/seccion_uni2"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|top">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#f1f4f5"
                    app:cardCornerRadius="10dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="381dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/descripcion_noticias" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="58dp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView"
                                android:layout_width="70dp"
                                android:layout_height="50dp"
                                android:contentDescription="@string/des_img1"
                                app:srcCompat="@drawable/newspaper" />

                            <Button
                                android:id="@+id/button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:onClick="irNoticia"
                                android:text="@string/noticias_btn"
                                android:textAlignment="center"
                                android:textStyle="bold"
                                tools:ignore="TouchTargetSizeCheck" />
                        </LinearLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="381dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/descripcion_conv" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="58dp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView2"
                                android:layout_width="70dp"
                                android:layout_height="50dp"
                                app:srcCompat="@drawable/loudspeaker"
                                android:contentDescription="@string/des_img2"/>

                            <Button
                                android:id="@+id/button2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:onClick="irConvocatoria"
                                android:text="@string/convocatorias"
                                android:textAlignment="center"
                                android:textStyle="bold" />
                        </LinearLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#f1f4f5"
                    app:cardCornerRadius="10dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="381dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/descripcion_bib" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="58dp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView3"
                                android:layout_width="70dp"
                                android:layout_height="50dp"
                                app:srcCompat="@drawable/onlinelibrary"
                                android:contentDescription="@string/des_img3"/>

                            <Button
                                android:id="@+id/button3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:onClick="irBiblioteca"
                                android:text="@string/biblioteca"
                                android:textAlignment="center"
                                android:textStyle="bold" />
                        </LinearLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="381dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/descripcion_bde" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="58dp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView4"
                                android:layout_width="70dp"
                                android:layout_height="50dp"
                                app:srcCompat="@drawable/database_storage"
                                android:contentDescription="@string/des_img4"/>

                            <Button
                                android:id="@+id/button4"
                                android:layout_width="189dp"
                                android:layout_height="58dp"
                                android:onClick="irBDE"
                                android:text="@string/bases_de_datos"
                                android:textAlignment="center"
                                android:textStyle="bold" />
                        </LinearLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#f1f4f5"
                    app:cardCornerRadius="10dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="381dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/descripcion_inv" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="58dp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView5"
                                android:layout_width="70dp"
                                android:layout_height="50dp"
                                app:srcCompat="@drawable/cad"
                                android:contentDescription="@string/des_img5"/>

                            <Button
                                android:id="@+id/button6"
                                android:layout_width="189dp"
                                android:layout_height="58dp"
                                android:onClick="irGrupoInv"
                                android:text="@string/investigacion"
                                android:textAlignment="center"
                                android:textStyle="bold" />
                        </LinearLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </TableRow>


        </TableLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>